--- a/sketch1.html
+++ b/sketch1.html
@@ -12,7 +12,12 @@
   
     <body style="background-color:#16b0c7">
     
-  <h1> THIS IS MY SKETCH 1 </h1>
+    <h1> THIS IS MY SKETCH 1 </h1>
+    <div style= "height:10px;"></div>
+    <p1 id = "blurb">Try Click on the Screen</p1>
+    <div style= "height:10px;"></div>
+
+
       <a href = "index.html"> Homepage </a>
    
       <script src = "sketch1.js"></script>
