--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p id = "title">These are my sketches.</p>
     <div style= "height:50px;"></div>
     
-    <a href = "">LINK 1</a>
+    <a href = "https://rw3773-4141.github.io/Homework_4.2_2025_10_20_13_22_46/">LINK 1</a>
     <div style= "height:10px;"></div>
     <a href = "">LINK 2</a>
     <div style= "height:20;"></div>
