--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div style= "height:20;"></div>
 
     <a href = "sketch1.html">sketch 1</a>
+    <div style= "height:20;"></div>
+    <a href = "sketch2.html">sketch 2</a>
 
 
     
