--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
 
     <script>
 (() => {
-  const chips = Array.from(document.querySelectorAll('.subtitle'));
+  let chips = Array.from(document.querySelectorAll('.subtitle'));
   if (!chips.length) return;
 
   
-  const palette = ['#FFD166', '#06D6A0', '#118AB2', '#EF476F', '#CDB4DB', '#FDE68A', '#9AE6B4', '#A7F3D0'];
+  let palette = ['#FFD166', '#06D6A0', '#118AB2', '#EF476F', '#CDB4DB', '#FDE68A', '#9AE6B4', '#A7F3D0'];
 
   
-  const state = chips.map((el, i) => {
+  let state = chips.map((el, i) => {
     el.style.background = palette[i % palette.length];
     
-    const w = el.offsetWidth || 120;
-    const h = el.offsetHeight || 40;
-    const x = Math.random() * Math.max(1, (window.innerWidth  - w));
-    const y = Math.random() * Math.max(1, (window.innerHeight - h));
+    let w = el.offsetWidth || 120;
+    let h = el.offsetHeight || 40;
+    let x = Math.random() * Math.max(1, (window.innerWidth  - w));
+    let y = Math.random() * Math.max(1, (window.innerHeight - h));
 
     
-    const speed = 1.2 + Math.random() * 1.4;
-    const angle = Math.random() * Math.PI * 2;
+    let speed = 1.2 + Math.random() * 1.4;
+    let angle = Math.random() * Math.PI * 2;
     let vx = Math.cos(angle) * speed;
     let vy = Math.sin(angle) * speed;
 
@@ -88,10 +88,10 @@
   }
 
   function tick() {
-    const W = window.innerWidth;
-    const H = window.innerHeight;
+    let W = window.innerWidth;
+    let H = window.innerHeight;
 
-    for (const s of state) {
+    for (let s of state) {
       if (!s.frozen) {
         s.x += s.vx;
         s.y += s.vy;
